traces/bug_916.txt
examples++-load/msh3.cpp:6188: error: DEAD_STORE
  The value written to &th0 (type Fem2D::Mesh3 const *) is never used.
Showing all 1 steps of the trace


examples++-load/msh3.cpp:6188:9: Write of unused value
6186.       {
6187.           const Mesh3 &Th3(*tab->operator[](i));
6188.           th0=&Th3;
                ^
6189.           if(verbosity>1)  cout << " determination of hmin : GluMesh3D + "<< Th3.nv << " " << Th3.nt << " "<< Th3.nbe << endl;
6190.           
